# fat32expander

./: .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TECHGUIDE.md  build.rs
.github/workflows/: release.yml  tests.yml
scripts/: test-resize.sh
scripts/qemu/: run-vm-multistage.sh  run-vm.exp  run-vm.sh  setup-alpine.sh  test-crash-recovery.sh  test-qemu.sh
scripts/qemu/lib/: common.sh  testdata.sh
scripts/qemu/tests/: test-4k-sectors.sh  test-deep-hierarchy.sh  test-fat-growth.sh  test-fragmented.sh  test-funky-names.sh  test-large-dir.sh  test-multi-stage.sh  test-near-full.sh  test-simple-resize.sh
src/: device.rs  error.rs  lib.rs  main.rs  system.rs
src/fat32/: mod.rs  operations.rs  structs.rs  validation.rs
src/resize/: calculator.rs  executor.rs  mod.rs  relocator.rs
tests/: integration_test.rs
